inizio creazione mailer

--- a/templates/barthel/edit.html.twig
+++ b/templates/barthel/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Modifica Barthel</h1>
 
-    {{ include('barthel/_form.html.twig', {'button_label': 'Modifica'}) }}
+    {{ include('barthel/_form.html.twig', {'button_label': 'Salva'}) }}
 
-    <a href="{{ path('app_barthel_index') }}">Torna alla lista</a>
+    <a class="btn btn-warning" href="{{ path('app_barthel_index') }}">Annulla</a>
 
     {{ include('barthel/_delete_form.html.twig') }}
 {% endblock %}
