--- a/templates/chiusura_servizio/new.html.twig
+++ b/templates/chiusura_servizio/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('chiusura_servizio/_form.html.twig') }}
 
-    <a href="{{ path('app_chiusura_servizio_index') }}">Torna alla lista</a>
+    <a class="btn btn-danger" href="{{ path('app_chiusura_servizio_index') }}">Annulla</a>
 {% endblock %}
