--- a/templates/chiusura_servizio/show.html.twig
+++ b/templates/chiusura_servizio/show.html.twig
@@ -26,9 +26,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_chiusura_servizio_index') }}">Torna alla lista</a>
+    <a class="btn btn-warning" href="{{ path('app_chiusura_servizio_index') }}">Torna alla lista</a>
 
-    <a href="{{ path('app_chiusura_servizio_edit', {'id': chiusura_servizio.id}) }}">Modifica</a>
+    <a class="btn btn-primary" href="{{ path('app_chiusura_servizio_edit', {'id': chiusura_servizio.id}) }}">Modifica</a>
 
     {{ include('chiusura_servizio/_delete_form.html.twig') }}
 {% endblock %}
