--- a/templates/parere_mmg/new.html.twig
+++ b/templates/parere_mmg/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('parere_mmg/_form.html.twig') }}
 
-    <a href="{{ path('app_parere_mmg_index') }}">Torna alla lista</a>
+    <a class="btn btn-danger" href="{{ path('app_parere_mmg_index') }}">Annulla</a>
 {% endblock %}
