--- a/templates/scheda_pai/index.html.twig
+++ b/templates/scheda_pai/index.html.twig
@@ -78,6 +78,7 @@
     </table>
 
     <a class="btn btn-success" href="{{ path('app_scheda_pai_new') }}">Nuova scheda</a>
+    <a class="btn btn-warning" href="{{ path('app_homepage') }}">Menù Principale</a>
     
 <nav aria-label="Page navigation example">
    <ul class="pagination justify-content-center">
