--- a/templates/spmsq/new.html.twig
+++ b/templates/spmsq/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('spmsq/_form.html.twig') }}
 
-    <a href="{{ path('app_s_p_m_s_q_index') }}">Torna alla lista</a>
+    <a class="btn btn-danger" href="{{ path('app_s_p_m_s_q_index') }}">Annulla</a>
 {% endblock %}
