--- a/templates/spmsq/show.html.twig
+++ b/templates/spmsq/show.html.twig
@@ -83,9 +83,9 @@
     </div>
 </div>
 
-    <a href="{{ path('app_s_p_m_s_q_index') }}">Torna alla lista</a>
+    <a class="btn btn-warning" href="{{ path('app_s_p_m_s_q_index') }}">Torna alla lista</a>
 
-    <a href="{{ path('app_s_p_m_s_q_edit', {'id': s_p_m_s_q.id}) }}">Modifica</a>
+    <a class="btn btn-primary" href="{{ path('app_s_p_m_s_q_edit', {'id': s_p_m_s_q.id}) }}">Modifica</a>
 
     {{ include('spmsq/_delete_form.html.twig') }}
 {% endblock %}
