--- a/templates/tinetti/new.html.twig
+++ b/templates/tinetti/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('tinetti/_form.html.twig') }}
 
-    <a href="{{ path('app_tinetti_index') }}">Torna alla lista </a>
+    <a class="btn btn-danger" href="{{ path('app_tinetti_index') }}">Annulla</a>
 {% endblock %}
