--- a/templates/vas/new.html.twig
+++ b/templates/vas/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('vas/_form.html.twig') }}
 
-    <a href="{{ path('app_vas_index') }}">Torna alla lista</a>
+    <a class="btn btn-danger" href="{{ path('app_vas_index') }}">Annulla</a>
 {% endblock %}
