--- a/templates/barthel/new.html.twig
+++ b/templates/barthel/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('barthel/_form.html.twig') }}
 
-    <a href="{{ path('app_barthel_index') }}">Torna alla lista</a>
+    <a class="btn btn-danger" href="{{ path('app_barthel_index') }}">Annulla</a>
 {% endblock %}
