--- a/templates/barthel/show.html.twig
+++ b/templates/barthel/show.html.twig
@@ -78,9 +78,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_barthel_index') }}">Torna alla lista</a>
+    <a class="btn btn-warning" href="{{ path('app_barthel_index') }}">Torna alla lista</a>
 
-    <a href="{{ path('app_barthel_edit', {'id': barthel.id}) }}">Modifica</a>
+    <a class="btn btn-primary" href="{{ path('app_barthel_edit', {'id': barthel.id}) }}">Modifica</a>
 
     {{ include('barthel/_delete_form.html.twig') }}
 {% endblock %}
