--- a/templates/braden/new.html.twig
+++ b/templates/braden/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('braden/_form.html.twig') }}
 
-    <a href="{{ path('app_form_pai_braden_index') }}">Torna alla lista</a>
+    <a class="btn btn-danger" href="{{ path('app_form_pai_braden_index') }}">Annulla</a>
 {% endblock %}
