--- a/templates/braden/show.html.twig
+++ b/templates/braden/show.html.twig
@@ -50,9 +50,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_form_pai_braden_index') }}">Torna alla lista</a>
+    <a class="btn btn-warning" href="{{ path('app_form_pai_braden_index') }}">Torna alla lista</a>
 
-    <a href="{{ path('app_form_pai_braden_edit', {'id': braden.id}) }}">Modifica</a>
+    <a class="btn btn-primary" href="{{ path('app_form_pai_braden_edit', {'id': braden.id}) }}">Modifica</a>
 
     {{ include('braden/_delete_form.html.twig') }}
 {% endblock %}
