--- a/templates/chiusura_servizio/_delete_form.html.twig
+++ b/templates/chiusura_servizio/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_chiusura_servizio_delete', {'id': chiusura_servizio.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ chiusura_servizio.id) }}">
-    <button class="btn">Elimina</button>
+    <button class="btn btn-danger">Elimina</button>
 </form>
