--- a/templates/lesioni/show.html.twig
+++ b/templates/lesioni/show.html.twig
@@ -50,9 +50,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_lesioni_index') }}">Torna alla lista</a>
+    <a class="btn btn-warning" href="{{ path('app_lesioni_index') }}">Torna alla lista</a>
 
-    <a href="{{ path('app_lesioni_edit', {'id': lesioni.id}) }}">Modifica</a>
+    <a class="btn btn-primary" href="{{ path('app_lesioni_edit', {'id': lesioni.id}) }}">Modifica</a>
 
     {{ include('lesioni/_delete_form.html.twig') }}
 {% endblock %}
