--- a/templates/parere_mmg/show.html.twig
+++ b/templates/parere_mmg/show.html.twig
@@ -26,9 +26,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_parere_mmg_index') }}">Torna alla lista</a>
+    <a class="btn btn-warning" href="{{ path('app_parere_mmg_index') }}">Torna alla lista</a>
 
-    <a href="{{ path('app_parere_mmg_edit', {'id': parere_mmg.id}) }}">Modifica</a>
+    <a class="btn btn-primary" href="{{ path('app_parere_mmg_edit', {'id': parere_mmg.id}) }}">Modifica</a>
 
     {{ include('parere_mmg/_delete_form.html.twig') }}
 {% endblock %}
