--- a/templates/scheda_pai/edit.html.twig
+++ b/templates/scheda_pai/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Modifica Scheda PAI</h1>
 
-    {{ include('scheda_pai/_form.html.twig', {'button_label': 'Modifica'}) }}
+    {{ include('scheda_pai/_form.html.twig', {'button_label': 'Salva'}) }}
 
-    <a href="{{ path('app_scheda_pai_index') }}">Torna alla lista</a>
+    <a class="btn btn-warning" href="{{ path('app_scheda_pai_index') }}">Annulla</a>
 
     {{ include('scheda_pai/_delete_form.html.twig') }}
 {% endblock %}
