--- a/templates/spmsq/_delete_form.html.twig
+++ b/templates/spmsq/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_s_p_m_s_q_delete', {'id': s_p_m_s_q.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ s_p_m_s_q.id) }}">
-    <button class="btn">Elimina</button>
+    <button class="btn btn-danger">Elimina</button>
 </form>
