--- a/templates/spmsq/edit.html.twig
+++ b/templates/spmsq/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Modifica scheda SPMSQ</h1>
 
-    {{ include('spmsq/_form.html.twig', {'button_label': 'Modifica'}) }}
+    {{ include('spmsq/_form.html.twig', {'button_label': 'Salva'}) }}
 
-    <a href="{{ path('app_s_p_m_s_q_index') }}">Torna alla lista</a>
+    <a class="btn btn-warning" href="{{ path('app_s_p_m_s_q_index') }}">Annulla</a>
 
     {{ include('spmsq/_delete_form.html.twig') }}
 {% endblock %}
