--- a/templates/spmsq/index.html.twig
+++ b/templates/spmsq/index.html.twig
@@ -22,7 +22,7 @@
                 <th>Qual è il cognome da ragazza si sua madre?</th>
                 <th>Sottragga da 20 tre e poi ancora fino in fondo</th>
                 <th>Totale</th>
-                <th></th>
+                <th>Operazioni</th>
             </tr>
         </thead>
         <tbody>
@@ -43,8 +43,13 @@
                 <td>{{ s_p_m_s_q.sottrazione ? 'Si' : 'No' }}</td>
                 <td>{{ s_p_m_s_q.totale }}</td>
                 <td>
-                    <a href="{{ path('app_s_p_m_s_q_show', {'id': s_p_m_s_q.id}) }}">Visualizza</a>
-                    <a href="{{ path('app_s_p_m_s_q_edit', {'id': s_p_m_s_q.id}) }}">Modifica</a>
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        Apri
+                        </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{{ path('app_s_p_m_s_q_show', {'id': s_p_m_s_q.id}) }}">Visualizza</a>
+                        <li><a class="dropdown-item" href="{{ path('app_s_p_m_s_q_edit', {'id': s_p_m_s_q.id}) }}">Modifica</a>
                 </td>
             </tr>
         {% else %}
@@ -55,5 +60,20 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_s_p_m_s_q_new') }}">Nuova scheda</a>
+    
+    <a class="btn btn-warning" href="{{ path('app_homepage') }}">Menù Principale</a>
+
+<nav aria-label="Page navigation example">
+   <ul class="pagination justify-content-center">
+       <li class="page-item"><a class="page-link {% if pagina==1 %}disabled{% endif %}" href="{{ path('app_s_p_m_s_q_index') }}"><<</a></li>
+        <li class="page-item"><a class="page-link {% if pagina==1 %}disabled{% endif %}" href="{{ path('app_s_p_m_s_q_index', {'page':pagina-1}) }}"><</a></li>
+    {% for i in 1..pagine_totali %}
+        {% if i <= pagina + 1 and i >= pagina - 1 %}
+            <li class="page-item"><a class="page-link" href="{{ path('app_s_p_m_s_q_index', {'page':i}) }}">{{i}}</a></li>
+        {% endif %}
+    {% endfor %}
+    <li class="page-item"><a class="page-link {% if pagina==pagine_totali %}disabled{% endif %}" href="{{ path('app_s_p_m_s_q_index', {'page':pagina+1}) }}">></a></li>
+      <li class="page-item"><a class="page-link {% if pagina==pagine_totali %}disabled{% endif %}" href="{{ path('app_s_p_m_s_q_index', {'page':pagine_totali}) }}">>></a></li>
+  </ul>
+</nav>
 {% endblock %}
