--- a/templates/tinetti/show.html.twig
+++ b/templates/tinetti/show.html.twig
@@ -114,9 +114,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_tinetti_index') }}">Torna alla lista</a>
+    <a class="btn btn-warning" href="{{ path('app_tinetti_index') }}">Torna alla lista</a>
 
-    <a href="{{ path('app_tinetti_edit', {'id': tinetti.id}) }}">Modifica</a>
+    <a class="btn btn-primary" href="{{ path('app_tinetti_edit', {'id': tinetti.id}) }}">Modifica</a>
 
     {{ include('tinetti/_delete_form.html.twig') }}
 {% endblock %}
