--- a/templates/valutazione_figura_professionale/edit.html.twig
+++ b/templates/valutazione_figura_professionale/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Modifica Valutazione Figura Professionale</h1>
 
-    {{ include('valutazione_figura_professionale/_form.html.twig', {'button_label': 'Modifica'}) }}
+    {{ include('valutazione_figura_professionale/_form.html.twig', {'button_label': 'Salva'}) }}
 
-    <a href="{{ path('app_valutazione_figura_professionale_index') }}">Torna alla lista</a>
+    <a class="btn btn-warning" href="{{ path('app_valutazione_figura_professionale_index') }}">Annulla</a>
 
     {{ include('valutazione_figura_professionale/_delete_form.html.twig') }}
 {% endblock %}
