--- a/templates/valutazione_figura_professionale/show.html.twig
+++ b/templates/valutazione_figura_professionale/show.html.twig
@@ -42,9 +42,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_valutazione_figura_professionale_index') }}">Torna alla lista</a>
+    <a class="btn btn-warning" href="{{ path('app_valutazione_figura_professionale_index') }}">Torna alla lista</a>
 
-    <a href="{{ path('app_valutazione_figura_professionale_edit', {'id': valutazione_figura_professionale.id}) }}">Modifica</a>
+    <a class="btn btn-primary" href="{{ path('app_valutazione_figura_professionale_edit', {'id': valutazione_figura_professionale.id}) }}">Modifica</a>
 
     {{ include('valutazione_figura_professionale/_delete_form.html.twig') }}
 {% endblock %}
