--- a/templates/valutazione_generale/index.html.twig
+++ b/templates/valutazione_generale/index.html.twig
@@ -25,7 +25,7 @@
                 <th>Igene personale</th>
                 <th>Cognitività</th>
                 <th>Comportamento</th>
-                <th></th>
+                <th>Operazioni</th>
             </tr>
         </thead>
         <tbody>
@@ -49,8 +49,13 @@
                 <td>{{ valutazione_generale.cognitivita }}</td>
                 <td>{{ valutazione_generale.comportamento }}</td>
                 <td>
-                    <a href="{{ path('app_valutazione_generale_show', {'id': valutazione_generale.id}) }}">Visualizza</a>
-                    <a href="{{ path('app_valutazione_generale_edit', {'id': valutazione_generale.id}) }}">Modifica</a>
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        Apri
+                        </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{{ path('app_valutazione_generale_show', {'id': valutazione_generale.id}) }}">Visualizza</a>
+                        <li><a class="dropdown-item" href="{{ path('app_valutazione_generale_edit', {'id': valutazione_generale.id}) }}">Modifica</a>
                 </td>
             </tr>
         {% else %}
@@ -61,5 +66,20 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_valutazione_generale_new') }}">Nuova scheda</a>
+    
+    <a class="btn btn-warning" href="{{ path('app_homepage') }}">Menù Principale</a>
+
+<nav aria-label="Page navigation example">
+   <ul class="pagination justify-content-center">
+       <li class="page-item"><a class="page-link {% if pagina==1 %}disabled{% endif %}" href="{{ path('app_valutazione_generale_index') }}"><<</a></li>
+        <li class="page-item"><a class="page-link {% if pagina==1 %}disabled{% endif %}" href="{{ path('app_valutazione_generale_index', {'page':pagina-1}) }}"><</a></li>
+    {% for i in 1..pagine_totali %}
+        {% if i <= pagina + 1 and i >= pagina - 1 %}
+            <li class="page-item"><a class="page-link" href="{{ path('app_valutazione_generale_index', {'page':i}) }}">{{i}}</a></li>
+        {% endif %}
+    {% endfor %}
+    <li class="page-item"><a class="page-link {% if pagina==pagine_totali %}disabled{% endif %}" href="{{ path('app_valutazione_generale_index', {'page':pagina+1}) }}">></a></li>
+      <li class="page-item"><a class="page-link {% if pagina==pagine_totali %}disabled{% endif %}" href="{{ path('app_valutazione_generale_index', {'page':pagine_totali}) }}">>></a></li>
+  </ul>
+</nav>
 {% endblock %}
