--- a/templates/valutazione_generale/new.html.twig
+++ b/templates/valutazione_generale/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('valutazione_generale/_form.html.twig') }}
 
-    <a href="{{ path('app_valutazione_generale_index') }}">Torna alla lista</a>
+    <a class="btn btn-danger" href="{{ path('app_valutazione_generale_index') }}">Annulla</a>
 {% endblock %}
