--- a/templates/valutazione_generale/show.html.twig
+++ b/templates/valutazione_generale/show.html.twig
@@ -78,9 +78,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_valutazione_generale_index') }}">Torna alla lista</a>
+    <a class="btn btn-warning" href="{{ path('app_valutazione_generale_index') }}">Torna alla lista</a>
 
-    <a href="{{ path('app_valutazione_generale_edit', {'id': valutazione_generale.id}) }}">Modifica</a>
+    <a class="btn btn-primary" href="{{ path('app_valutazione_generale_edit', {'id': valutazione_generale.id}) }}">Modifica</a>
 
     {{ include('valutazione_generale/_delete_form.html.twig') }}
 {% endblock %}
