--- a/templates/vas/_delete_form.html.twig
+++ b/templates/vas/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_vas_delete', {'id': va.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ va.id) }}">
-    <button class="btn">Elimina scheda</button>
+    <button class="btn btn-danger">Elimina scheda</button>
 </form>
