--- a/templates/vas/show.html.twig
+++ b/templates/vas/show.html.twig
@@ -50,9 +50,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_vas_index') }}">Torna alla lista</a>
+    <a class="btn btn-warning" href="{{ path('app_vas_index') }}">Torna alla lista</a>
 
-    <a href="{{ path('app_vas_edit', {'id': va.id}) }}">Modifica</a>
+    <a class="btn btn-primary" href="{{ path('app_vas_edit', {'id': va.id}) }}">Modifica</a>
 
     {{ include('vas/_delete_form.html.twig') }}
 {% endblock %}
