modifiche estetiche: fino a validazione input

--- a/templates/barthel/edit.html.twig
+++ b/templates/barthel/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('barthel/_form.html.twig', {'button_label': 'Salva'}) }}
 
-    <a class="btn btn-warning" href="{{ path('app_barthel_index') }}">Annulla</a>
+    <a class="btn btn-primary" href="{{ path('app_barthel_index') }}">Annulla</a>
 
     {{ include('barthel/_delete_form.html.twig') }}
 {% endblock %}
