--- a/templates/barthel/show.html.twig
+++ b/templates/barthel/show.html.twig
@@ -78,7 +78,7 @@
         </tbody>
     </table>
 
-    <a class="btn btn-warning" href="{{ path('app_barthel_index') }}">Torna alla lista</a>
+    <a class="btn btn-primary" href="{{ path('app_barthel_index') }}">Torna alla lista</a>
 
     <a class="btn btn-primary" href="{{ path('app_barthel_edit', {'id': barthel.id}) }}">Modifica</a>
 
