--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -5,3 +5,8 @@ $primary: darken(#428bca, 20%);
 
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
+
+label.required:after {
+    content: " *";
+    color: red;
+}
